# pixdl

./: .dockerignore  .gitignore  01_cat_vs_dog_pt.ipynb  02_cat_vs_dog_tf.ipynb  03_digit_recognizer_tf.ipynb  04_skin_ham10000_pt.ipynb  04_skin_pt.ipynb  Dockerfile.pytorch  Dockerfile.tf  Makefile  README.md  pyproject.toml
